# advent-of-code-2020-py

./: .pre-commit-config.yaml  README.md  makefile  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
advent_of_code_2020_py/: console.py  debug.py  grid.py  linalg.py  perf.py  problem.py  problem01.py  problem02.py  problem03.py  problem04.py  problem04_ecs.py  problem05.py  problem06.py  problem07.py  problem08.py  problem09.py  problem10.py  problem11.py  problem12.py  problem13.py  problem14.py  problem15.py  problem16.py  problem17.py  problem18.py  problem19.py  problem20.py  problem21.py  problem22.py  problem23.py  problem24.py  problem25.py  temp.py
inputs/: problem01.part1.csv
tests/: test_grid.py  test_linalg.py  test_problem01.py  test_problem02.py  test_problem03.py  test_problem04.py  test_problem04_ecs.py  test_problem05.py  test_problem06.py  test_problem07.py  test_problem08.py  test_problem09.py  test_problem10.py  test_problem11.py  test_problem12.py  test_problem13.py  test_problem14.py  test_problem15.py  test_problem16.py  test_problem17.py  test_problem18.py  test_problem19.py  test_problem20.py  test_problem21.py  test_problem22.py  test_problem23.py  test_problem24.py  test_problem25.py  test_temp.py
