[tool.poetry]
name = "advent_of_code_2020_py"
version = "0.1.0"
description = ""
authors = ["Saul Reynolds-Haertle"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
prettyprinter = "^0.18.0"

[tool.black]
line_length=79

[tool.isort]
profile="google"
skip_gitignore=true
src_paths="advent_of_code_2020_py"
color_output=true

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
black = "^20.8b1"
flake8 = "^3.8.4"
pytype = "^2020.11.23"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
